# bookgraph-revisited

./: .gitignore  AGENTS.md  AGENT_USAGE.md  README.md  README_LOCAL_LLAMA.md  calibre_citations_pipeline.py  docker-compose.yaml  extract_citations.py  launch_llama_server_2_gpus.sh  launch_llama_server_5090.sh  monitor_gpu_util.sh  preprocess_citations.py  process_citations_pipeline.py  pyproject.toml  run_extract_defaults.sh  run_folder.py  run_full_pipeline.sh  run_openrouter_single.sh  run_profiled_single.sh  run_single_file.py  start_llamacpp.sh  start_services.sh
MP_TEST/: MP_OLD.py
books/: README.md
datasets/: README.md  author_aliases.json
evaluation/: DFW-PLURIBUS.txt  create_simulated_outputs.py  debug_search.py  evaluate_essay.py  generate_enrichment_ground_truth.py  generate_ground_truth.py
frontend/: README.md  datasets.json  index-svg.html  index.html
goodreads_data/: README.md  authors_metadata.json  original_publication_dates.json
lib/: extract_citations.py  goodreads_scraper.py  logging_config.py  main_pipeline.py  metadata_enricher.py  preprocess_citations.py  validate_citations.py  wikipedia_agent.py
old/: AGENTS.md  process_citations_pipeline.py
profiling/: README.md
reports/: README.md
runners/: README.md  launch_llama_server_2_gpus.sh  launch_llama_server_5090.sh  run_calibre_openrouter.sh  run_extract_defaults.sh  run_full_pipeline.sh  run_openrouter_single.sh
scripts/: apply_metadata_to_graph.py  backfill_source_metadata.py  backup_runtime_data.py  build_goodreads_index.py  build_wiki_people_index.py  consolidate_datasets.py  (+49 more)
(+164 files in other folders)
