[project]
name = "bookgraph-revisited"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.7.1",
    "nltk>=3.9",
    "pydantic>=2.6",
    "tokenizers>=0.15",
    "python-dotenv>=1.0.1",
    "llama-index>=0.11.0",
    "llama-index-llms-openai-like>=0.1.7",
    "pytest>=8.3",
    "tqdm>=4.67.1",
    "snakeviz>=2.2.2",
    "mwxml>=0.3.6",
    "llama-index-tools-mcp>=0.4.5",
    "pyppeteer>=2.0.0",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
]
